[gd_scene load_steps=8 format=3 uid="uid://clck0oh54qtre"]

[ext_resource type="Script" path="res://addons/src/scripts/DialogueSpriteEntry.gd" id="1_oynrx"]

[sub_resource type="Gradient" id="Gradient_jsg8m"]
offsets = PackedFloat32Array(0.558442)
colors = PackedColorArray(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b46qh"]
gradient = SubResource("Gradient_jsg8m")
width = 1112
height = 320
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_fyu02"]
offsets = PackedFloat32Array(0.519481)
colors = PackedColorArray(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isuox"]
gradient = SubResource("Gradient_fyu02")

[sub_resource type="Gradient" id="Gradient_n5b0c"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ksr4u"]
gradient = SubResource("Gradient_n5b0c")
width = 64

[node name="DialogueTextEntry" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -36.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b46qh")
stretch_mode = 2
script = ExtResource("1_oynrx")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 14.0
offset_right = 1098.0
offset_bottom = 309.0
texture = SubResource("GradientTexture1D_isuox")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
offset_left = 965.0
offset_top = 29.0
offset_right = 1079.0
offset_bottom = 76.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "DELETE"

[node name="BoxControl" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 85.0
offset_right = 1060.0
offset_bottom = 260.0

[node name="MoveUpButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 64
text = "^"

[node name="MoveDownButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "V"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="SpriteInput" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 15.0
offset_right = 874.0
offset_bottom = 299.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51

[node name="TextureSection" type="HBoxContainer" parent="SpriteInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.17

[node name="VisibleTag" type="Label" parent="SpriteInput/TextureSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/font_size = 24
text = "Textures"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SpriteInput/TextureSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.64

[node name="Text_Idx2" type="TextureRect" parent="SpriteInput/TextureSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_ksr4u")

[node name="Text_Idx0" type="TextureRect" parent="SpriteInput/TextureSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_ksr4u")

[node name="Text_Idx4" type="TextureRect" parent="SpriteInput/TextureSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_ksr4u")

[node name="Text_Idx1" type="TextureRect" parent="SpriteInput/TextureSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_ksr4u")

[node name="Text_Idx3" type="TextureRect" parent="SpriteInput/TextureSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_ksr4u")

[node name="VisibleToggles" type="HBoxContainer" parent="SpriteInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.32

[node name="VisibleTag" type="Label" parent="SpriteInput/VisibleToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/font_size = 24
text = "Visible"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SpriteInput/VisibleToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.09

[node name="Visible_Idx2" type="CheckButton" parent="SpriteInput/VisibleToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Visible_Idx0" type="CheckButton" parent="SpriteInput/VisibleToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Visible_Idx4" type="CheckButton" parent="SpriteInput/VisibleToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Visible_Idx1" type="CheckButton" parent="SpriteInput/VisibleToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Visible_Idx3" type="CheckButton" parent="SpriteInput/VisibleToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="FlippedToggles" type="HBoxContainer" parent="SpriteInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.32

[node name="VisibleTag" type="Label" parent="SpriteInput/FlippedToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/font_size = 24
text = "Flip"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SpriteInput/FlippedToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.07

[node name="Flip_Idx2" type="CheckButton" parent="SpriteInput/FlippedToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Flip_Idx0" type="CheckButton" parent="SpriteInput/FlippedToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Flip_Idx4" type="CheckButton" parent="SpriteInput/FlippedToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Flip_Idx1" type="CheckButton" parent="SpriteInput/FlippedToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Flip_Idx3" type="CheckButton" parent="SpriteInput/FlippedToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="HighlightToggles" type="HBoxContainer" parent="SpriteInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.32

[node name="VisibleTag" type="Label" parent="SpriteInput/HighlightToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_font_sizes/font_size = 24
text = "Highlighted"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SpriteInput/HighlightToggles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.07

[node name="Highlight_Idx2" type="CheckButton" parent="SpriteInput/HighlightToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Highlight_Idx0" type="CheckButton" parent="SpriteInput/HighlightToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Highlight_Idx4" type="CheckButton" parent="SpriteInput/HighlightToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Highlight_Idx1" type="CheckButton" parent="SpriteInput/HighlightToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Highlight_Idx3" type="CheckButton" parent="SpriteInput/HighlightToggles/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[connection signal="button_up" from="DeleteButton" to="." method="OnDelete"]
[connection signal="button_up" from="BoxControl/MoveUpButton" to="." method="OnMoveUp"]
[connection signal="button_up" from="BoxControl/MoveDownButton" to="." method="OnMoveDown"]
